# axum_backend_boilerplate

./: .env.example  .gitignore  Cargo.toml
src/: controller.rs  main.rs  model.rs
