[package]
name = "axum_prac"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["full"]}
tower-http = "0.6.2"
mongodb = "2.8"
dotenvy = "0.15"
futures-util = "0.3.31"
futures = "0.3.31"
